k8s/applications/api-datatruyen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-datatruyen
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-datatruyen
  template:
    metadata:
      labels:
        app: api-datatruyen
    spec:
      containers:
      - name: api-datatruyen
        image: webtruyenacr2855.azurecr.io/api-datatruyen:209addceb39cfc6f0e06e8be92d59dd2c7c0b575
        ports:
        - containerPort: 8000
