k8s/applications/api-datatruyen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-datatruyen
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: api-datatruyen
  ports:
  - port: 8000
    targetPort: 8000
